# stronger_custom

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
stronger_custom/: __init__.py  hooks.py  modules.txt  utils.py
stronger_custom/config/: desktop.py  docs.py
stronger_custom/stronger_custom/api/: login.py
stronger_custom/stronger_custom/report/custom_p&l_statement/: custom_p&l_statement.js  custom_p&l_statement.json  custom_p&l_statement.py
stronger_custom/stronger_custom/report/custom_profit_and_loss/: custom_profit_and_loss.js  custom_profit_and_loss.json  custom_profit_and_loss.py
stronger_custom/stronger_custom/report/gross_profit_with_return/: gross_profit_with_return.js  gross_profit_with_return.json  gross_profit_with_return.py
