[project]
name = "stronger_custom"
authors = [
    { name = "houssam", email = "eng.houssam.sawan@gmail.com"}
]
description = "Factory custom"
# Changed from 3.10 to 3.8 to match your Docker environment
requires-python = ">=3.8"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Add any specific requirements from your requirements.txt here, for example:
    # "requests>=2.25.1",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
# Changed to match your environment
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", "B018", "B023", "B904", "E101", "E402", "E501", "E741", "F401", "F403", "F405", "F722", "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true